# Wetland_Assemble

./: .gitignore  01_dataset_comparison.ipynb  02_temporal_dynamics.ipynb  03_uncertainty_hotspots.ipynb  04_gee_refinement_flow.ipynb  GEMINI.md  README.md  SYSTEM_PROMPT.md  pyproject.toml
config/: datasets.yaml  gee_config.yaml
docs/datasets/: Berkeley-RWAWC.md  G2017.md  GIEMS-MC.md  GLWD v2.md  GWD30.md  SWAMPS.md  TOPMODEL.md  WAD2M.md  datas.txt  dataset_folder.txt
docs/guides/: notebook-setup.md  style-guide.md  usage-hint.md
docs/plans/: 2026-03-04-feat-wetland-dataset-evaluation-plan.md  2026-03-04-plan-wetland-dataset-analysis-details.md  2026-03-05-feat-dataset-comparison-viz-plan.md  2026-03-05-feat-exploratory-analysis-notebooks-plan.md  2026-03-05-feat-gwd30-tiling-system-plan.md  2026-03-05-feat-wetland-consensus-refinement-plan.md  2026-03-09-feat-wetland-dataset-comparison-plan.md  2026-03-09-feat-wetland-dataset-comparison-zh-plan-deepened.md  2026-03-09-feat-wetland-dataset-comparison-zh-plan.md  (+9 more)
infos/: GLWD v2.md  GWD30.md  LSTM Wetland.md  SWAMPS.md  TOPMODEL.md
notebooks/: 01_dataset_comparison.ipynb  02_temporal_dynamics.ipynb  03_uncertainty_hotspots.ipynb  04_gee_refinement_flow.ipynb  05_hotspot_gee_extraction.ipynb  verify_src_all.ipynb
scripts/: example_alignment.py  run_hotspot_ensemble.py  verify_workflow.py
tests/: test_data_loader.py  test_geospatial.py  test_hotspots.py  test_loaders.py  test_mappings.py  test_mgrs_tiling.py  test_visualization.py
todos/: 2026-03-11-refactor-tailored-dataset-loaders.md
(+42 files in other folders)
