[project]
name = "wetland-analysis"
version = "0.1.0"
description = "Wetland dataset classification accuracy evaluation and trend analysis"
authors = [
    {name = "Wetland Research Team", email = "team@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "xarray>=2023.12.0",
    "rioxarray>=0.15.1",
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "cartopy>=0.22.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "netcdf4>=1.6.5",
    "rasterio>=1.3.9",
    "pyproj>=3.6.0",
    "shapely>=2.0.0",
    "seaborn>=0.13.0",
    "tqdm>=4.66.0",
    "geemap>=0.32.0",
    "ipyleaflet>=0.19.0",
    "jupyter-server-proxy>=4.1.0",
    "localtileserver>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "jupyterlab>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"